[package]
name = "aboidant"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_tweening = { git = "https://github.com/iancormac84/bevy_tweening.git", branch = "new-lenses" }
leafwing-input-manager = "*"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras.git" }
