[package]
name = "aboidant"
version = "0.1.0"
authors = ["iancormac84 <wilnathan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15"
bevy_tweening = "0.12"
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git" }
smooth-bevy-cameras = "0.13"
